--- a/intro.html
+++ b/intro.html
@@ -10,14 +10,14 @@
 </head>
 <body>
   <div class="UI-container">
-    <section class="welcome fade-in-out invisible ">Welcome To Guessy!</section>
+    <section class="welcome fade-in-out flex-visible">Welcome To Guessy!</section>
     <form class="invisible fade-in">
       <label for="username">What's your name?</label>
       <input name="username" id="username" placeholder="Enter your name(Mike, Sonic, John Cena...)">
       <button>Done</button>
     </form>
-    <section class="greeting flex-visible fade-in">Greetings [insert name]!!</section>
+    <section class="greeting invisible fade-in">Greetings [insert name]!!</section>
   </div>
-  
+  <script src="./scripts/intro.js"></script>
 </body>
 </html>
