structure of Guessy's html is set. On to CSS

--- a/intro.html
+++ b/intro.html
@@ -11,6 +11,6 @@
 <body>
   <div class="UI-container">
   </div>
-  <script src="./scripts/intro.js"></script>
+  <script type="module" src="./scripts/intro.js"></script>
 </body>
 </html>
