Finished basic styling. Adjustments can be made at end of project

--- a/guessy.html
+++ b/guessy.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Guessing game</title>
-  <link rel="stylesheet" href="./styles/animations.css">
-  <link rel="stylsheet" href="./styles/guessyStyles/general.css">
+  <link rel="stylesheet" href="./styles/animations.css"/>
+  <link rel="stylesheet" href="./styles/guessyStyles/general.css"/>
+  <link rel="stylesheet" href="./styles/guessyStyles/guessy.css"/>
+  <link rel="stylesheet" href="./styles/colors.css"/>
 </head>
 <body>
   <div class="container">
@@ -13,9 +15,67 @@
 
     </div>
     <div class="letters">
-      <div class="letter">
+      <button class="letter">
         A
-      </div>
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      <button class="letter">
+        A
+      </button>
+      
     </div>
   </div>
   <script type="module" src="./scripts/guessy.js"></script>
