--- a/guessy.html
+++ b/guessy.html
@@ -12,6 +12,7 @@
 <body>
   <div class="container">
 
+    <button ></button>
   </div>
   <script type="module" src="./scripts/guessy.js"></script>
 </body>
