Created Congratulations method so a user knows when they've gotten the the answer. To Develop more user understanding, I'll add hints pertaining to the word to Guess(array of objects from which the words and hints will be drawn)

--- a/guessy.html
+++ b/guessy.html
@@ -8,8 +8,12 @@
   <link rel="stylesheet" href="./styles/guessyStyles/general.css"/>
   <link rel="stylesheet" href="./styles/guessyStyles/guessy.css"/>
   <link rel="stylesheet" href="./styles/colors.css"/>
+  <link rel="stylesheet" href="./styles/guessyStyles/confetti.css">
 </head>
 <body>
+  <div class="confetti-wrapper">
+    <!-- Confetti elements will be created using CSS -->
+  </div>
   <div class="container">
 
   </div>
