Created hints box. Positioning and resizing of other components needs to be fixed('.letters', '.entry', '.container')

--- a/guessy.html
+++ b/guessy.html
@@ -14,8 +14,16 @@
   <div class="confetti-wrapper">
     <!-- Confetti elements will be created using CSS -->
   </div>
-  <div class="container">
-
+  <div class="overall">
+    <div class="hint">
+      Hint: <span class="act-hint">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur vel laudantium eius animi facere recusandae quos, accusamus provident magnam deserunt totam ab voluptas? Omnis tempora non fuga blanditiis iure porro!</span>
+    </div>
+    <div class="container">
+  
+    </div>
+    <div class="hint">
+      Hint: <span class="act-hint">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur vel laudantium eius animi facere recusandae quos, accusamus provident magnam deserunt totam ab voluptas? Omnis tempora non fuga blanditiis iure porro!</span>
+    </div>
   </div>
   <script type="module" src="./scripts/guessy.js"></script>
 </body>
