--- a/guessy.html
+++ b/guessy.html
@@ -9,20 +9,32 @@
   <link rel="stylesheet" href="./styles/guessyStyles/guessy.css"/>
   <link rel="stylesheet" href="./styles/colors.css"/>
   <link rel="stylesheet" href="./styles/guessyStyles/confetti.css">
+  <link rel="stylesheet" href="./styles/animations.css">
 </head>
 <body>
   <div class="confetti-wrapper">
     <!-- Confetti elements will be created using CSS -->
   </div>
+  <div class="mobile-hint-container">
+    <div class="hint-container">
+      <p class="hint">
+      </p>
+    </div>
+  </div>
   <div class="overall">
-    <div class="hint">
-      Hint: <span class="act-hint">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur vel laudantium eius animi facere recusandae quos, accusamus provident magnam deserunt totam ab voluptas? Omnis tempora non fuga blanditiis iure porro!</span>
+    <button class="hint-button">
+      <img src alt="show hint button.">
+    </button>
+    <div class="hint-container">
+      <p class="hint wide-screen">
+      </p>
     </div>
     <div class="container">
   
     </div>
-    <div class="hint">
-      Hint: <span class="act-hint">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur vel laudantium eius animi facere recusandae quos, accusamus provident magnam deserunt totam ab voluptas? Omnis tempora non fuga blanditiis iure porro!</span>
+    <div class="hint-container">
+      <p class="hint wide-screen">
+      </p>
     </div>
   </div>
   <script type="module" src="./scripts/guessy.js"></script>
