--- a/intro.html
+++ b/intro.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./styles/intro.css">
   <link rel="stylesheet" href="./styles/general-intro.css">
   <link rel="stylesheet" href="./styles/animations.css">
+  <link rel="stylesheet" href="./styles/colors.css">
 </head>
 <body>
   <div class="UI-container">
