Done with mobile responsiveness. Unto fixing minor bugs like, not displaying all the required letters.

--- a/guessy.html
+++ b/guessy.html
@@ -23,7 +23,7 @@
   </div>
   <div class="overall">
     <button class="hint-button">
-      <img src="./assets/images/icons/question-mark-cartoony-icon.png" alt="show hint button.">
+      <img class="hint-button-img" src="./assets/images/icons/question-mark-cartoony-icon.png" alt="show hint button.">
     </button>
     <div class="hint-container">
       <p class="hint wide-screen">
