Mobile and  Wide Screen Compatibility, Checked. Almost ocmpletely efficient. Still need to fix required letters not showing up.

--- a/guessy.html
+++ b/guessy.html
@@ -21,7 +21,7 @@
       </p>
     </div>
   </div>
-  <div class="overall">
+  <main class="overall">
     <button class="hint-button">
       <img class="hint-button-img" src="./assets/images/icons/question-mark-cartoony-icon.png" alt="show hint button.">
     </button>
@@ -36,7 +36,7 @@
       <p class="hint wide-screen">
       </p>
     </div>
-  </div>
+  </main>
   <script type="module" src="./scripts/guessy.js"></script>
 </body>
 </html>
