Functionality done. Working on the intro now...

--- a/guessy.html
+++ b/guessy.html
@@ -10,33 +10,18 @@
   <link rel="stylesheet" href="./styles/colors.css"/>
   <link rel="stylesheet" href="./styles/guessyStyles/confetti.css">
   <link rel="stylesheet" href="./styles/animations.css">
+  <link rel="stylesheet" href="./styles/guessyStyles/guessy-intro.css">
 </head>
 <body>
-  <div class="confetti-wrapper">
-    <!-- Confetti elements will be created using CSS -->
-  </div>
-  <div class="mobile-hint-container">
-    <div class="hint-container">
-      <p class="hint">
-      </p>
+  <main>
+    <div class="game-intro">
+    <div class="black-bar">
+    </div>
+    <div class="intro-stage">
+      <p class="stage"></p>
     </div>
   </div>
-  <main class="overall">
-    <button class="hint-button">
-      <img class="hint-button-img" src="./assets/images/icons/question-mark-cartoony-icon.png" alt="show hint button.">
-    </button>
-    <div class="hint-container">
-      <p class="hint wide-screen">
-      </p>
-    </div>
-    <div class="container">
-  
-    </div>
-    <div class="hint-container">
-      <p class="hint wide-screen">
-      </p>
-    </div>
-  </main>
+</main>
   <script type="module" src="./scripts/guessy.js"></script>
 </body>
 </html>
